# civilizator_robot

./: Cargo.toml
.cargo/: config.toml
src/: build_roads.rs  collect_rocks.rs  explore_world.rs  main.rs  poi.rs  visualizer2.rs
visualizer/src/: lib.rs
