[package]
name = "robot_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr"}
charting_tools = {version = "1.0.1", registry = "kellnr"}
#recycle_by_ifrustrati = {version = "0.1.0", registry = "kellnr"}
rustici_planner = {version = "0.1.1", registry = "kellnr"}
pmp_collect_all = {version = "0.1.3", registry = "kellnr"}
CivilEngineer = {version = "0.1.0", registry = "kellnr"}
op_map = {version = "1.0.0", registry = "kellnr"}
rust_and_furious_dynamo = {version = "0.1.2", registry = "kellnr"}


rip_worldgenerator = {version = "0.5.42", registry = "kellnr"}

strum = "0.25.0"

visualizer = {path = "../visualizer/"}
